Journal page: fix background position problem on IE

--- a/css/preorder.css
+++ b/css/preorder.css
@@ -1003,9 +1003,9 @@ body {
 .journalPage-using-new-generic-170103.landingScreen-generic-170103 .landingHeight .landingWidth .imageFrame {
   background-color: #c2c2c2;
   background-image: url("/img/170104a - lifestyle journal page bg_q9.jpg");
-  background-position: right 260px center;
   background-size: 100%;
   background-position-y: 50%;
+  background-position-x: 220px;
 }
 .journalPage-using-new-generic-170103.landingScreen-generic-170103 .landingHeight .landingWidth .imageFrame.tallAspect {
   background-size: cover;
@@ -1139,14 +1139,6 @@ body {
   line-height: 31px;
 }
 .shopPage-using-new-generic-170103.landingScreen-generic-170103 .landingHeight .landingWidth .imageFrame {
-  /*
-					background-image: url("/img/170103 collections bg_q9.jpg");
-					background-position-x: 180%;
-					background-position-y: 10%;
-					background-size: 110%;
-					background-repeat: no-repeat;
-					background-color: #bab9c1;
-					*/
   background-image: url("/img/grays_q9.jpg");
   background-position-x: center;
   background-position-y: 70%;
